fix overlap padding
at top of body

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ h5 {
 }
 
 #home-body{
-  padding-top: 10.5%;
+  padding-top: 150px;
 }
 
 #port-body{
